--- a/style.css
+++ b/style.css
@@ -236,12 +236,27 @@ body{
     padding: 0 100px;
 }
 
-#botonArriba {
-    position: fixed;
-    bottom: 20px;
-    right: -100px;
+.button-up{
     width: 40px;
-    transition: 1s;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer;
+    border: 6px solid transparent;
+   background-color: #ffffff;
+   transition: all 300ms ease;
+   transform: scale(0);
+}
+
+.button-up:hover {
+    width: 50px;
+    height: 50px;
+    background-color: #051f68;
 }
 
 
