--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body{
 
 .menu .navbar ul li a:hover{
     color: #ce9678;
+    text-decoration: underline;
 }
 
 #menu {
@@ -79,13 +80,25 @@ body{
 }
 
 .header-content h1{
-    padding: 150px;
+    padding: 100px;
     font-size: 50px;
+    line-height: 80px;
+    color: #e69327;
+    text-transform: uppercase;
+    box-shadow: 10px 20px 30px #c5c5c5;
+    border-color: #c5c5c5;
+}
+
+.header-content h2{
+    padding: 10px;
+    font-size: 20px;
     line-height: 80px;
     color: #f9fafc;
     text-transform: uppercase;
     margin-bottom: 20px;
+    text-decoration: underline;
 }
+
 
 .header-content p{
     font-size: 16px;
@@ -93,6 +106,14 @@ body{
     padding: 0 150px;
     margin-bottom: 40px;
     line-height: 30px;
+}
+.header-image{
+    color: transparent;
+    width: 100px;
+    margin-bottom: 15px 15px;
+    margin-top: 15px;
+    background-color:#52535a;
+    border-radius: 50%;
 }
 
 .btn-1 {
