--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body{
     box-shadow: 10px 20px 30px #c5c5c5;
     border-radius: 100px;
     border-color: #c5c5c5;
+    text-shadow: 1px 4px 2px#ffffff;
 }
 
 
@@ -140,7 +141,7 @@ body{
     background-color: #ffffff;
     position: relative;
 }
-#servises-p {
+#services-p {
     padding: 30px;
     font-size: 30px;
     line-height: 80px;
@@ -148,6 +149,7 @@ body{
     text-transform: uppercase;
     margin-bottom: 20px;
     text-decoration: underline;
+    margin-bottom:100px ;
 }
 
 .services-content {
@@ -161,16 +163,18 @@ body{
     text-transform: uppercase;
     padding: 10px;
     margin-bottom: 15px;
+    text-shadow: 05px 5px 5px #c75d17;
 }
 
 .txt-p {
     font-size: 16px;
     color: #414247;
     padding: 0 250px;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
 }
 
 .services-group {
+    
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
@@ -178,22 +182,30 @@ body{
 
 .services-1 {
     padding: 0 25px;
+
+}
+
+.services-p {
+    margin-bottom: 60px;
 }
 
 .services-1 img {
     width: 200px;
+    margin-bottom: 30px;
 }
 
 .services-img {
     position: absolute;
     top: 0;
     right: 0;
+    
 }
 
 .services-1 h3{
     color: #323337;
     font-size: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    text-decoration: underline;
 }
 
 .galeria {
@@ -210,6 +222,7 @@ body{
 
 .galeria-content {
     text-align: center;
+    margin-bottom: 50px;
 }
 .galeria-content h2 {
     font-size: 55px;
@@ -217,13 +230,16 @@ body{
     color: #f9fafc;
     text-transform: uppercase;
     margin-bottom: 50px;
+    text-shadow: 05px 5px 5px #c75d17;
+    
 }
 
 .galeria-content p{
-    font-size: 16px;
-    color:#c5c5c5;
+    font-size: 18px;
+    color:#ffffff;
     margin-bottom: 50px;
     padding: 0 100px;
+    
 }
 
 .galeria-group {
@@ -244,10 +260,11 @@ body{
 .galeria-1 h3 {
     color: #eaccb3;
     font-size: 15px;
+    
 }
 
 .contact {
-    padding: 100px 0;
+    padding: 20px 0;
     background-color: #ffffff;
     position: relative;
 }
@@ -261,8 +278,8 @@ body{
     line-height: 70px;
     color: #323337;
     text-transform: uppercase;
-    padding: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 0;
+    text-shadow: 05px 5px 5px #c75d17;
 }
 
 .contact-content h3 {
@@ -272,37 +289,36 @@ body{
     padding: 0 100px;
 }
 
-.button-up{
+#button-up {
     width: 40px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
+    border-radius: 50px;
     position: fixed;
-    bottom: 50px;
-    right: 50px;
+    bottom: 80px;
+    right: 20px;
+    font-size: 10px;
     cursor: pointer;
-    border: 6px solid transparent;
-   background-color: #ffffff;
-   transition: all 300ms ease;
-   transform: scale(0);
+    border: 4px solid transparent;
+    transition: all 300ms ease;
+    transform: scale(0);
 }
 
-.button-up:hover {
-    width: 50px;
-    height: 50px;
+#button-up:hover {
+    transform: scale(1.2);
     background-color: #051f68;
+
 }
 
 
 
 
 .footer {
-    padding: 25px 0;
     background-color: #000000;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex;
 }
 
 .footer-content{
@@ -320,14 +336,17 @@ body{
 
 .instituto {
     color: #ce6809;
+
 }
 
 .facebook{
-    display: inline-block;
+
+    display: flex;
     padding: 11px 35px;
     background-color: #ffffff;
     color: #1153e2;
     border-radius: 35px;
+    margin: 15px;
 }
 
 .facebook:hover {
@@ -336,7 +355,7 @@ body{
 }
 
 .whatsapp{
-    display: inline-block;
+    display: flex;
     padding: 11px 35px;
     background-color: #ffffff;
     color: #20c22e;
@@ -383,6 +402,16 @@ body{
 
     .header-content {
         padding: 100px 30px;
+    }
+
+    .header-content h1 {
+        font-size: 35px;
+        padding: 0;
+    }
+
+    .header-content h2 {
+        font-size: 20px;
+        padding: 0;
     }
 
     .header-content p {
