--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body{
     background-image: linear-gradient(
         rgba(0,0,0,0.7),
         rgba(0,0,0,0.7) ),
-        url(/images/banner3.jpg);
+        url(https://drive.google.com/file/d/15Yeej-iMtGzhgvtshv_WpPgM-0KU9lwL/view?usp=drive_link);
         background-position: center bottom;
         background-repeat: no-repeat;
         background-size: cover;
